# simple-blog

./: .dockerignore  .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  example.env  pom.xml  todo.md
.github/workflows/: build.yaml  docker-image.yml  service-docker-image.yml  webapp-docker-image.yml
backend/: .gitignore  Dockerfile  Makefile  build.gradle  create-dump.sh  docker-compose.yaml  example.env  pom.xml  run-tests.sh
backend/.devcontainer/: devcontainer.json  docker-compose.yaml
backend/codegen/: pom.xml
backend/data/: service.db  service.db~
backend/service/: pom.xml
backend/spec/: schema.sql  swagger-config.yaml  swagger.yaml
client/: .gitignore  docker-compose.yaml  nginx.conf  openapitools.json
client/src/: app.tsx  index.css  index.tsx
data/: minify.sh
data/static/: highlight.min.js  index.css  index.js  index.min.css  (+1 more)
frontend/: .env.production  .gitignore  Dockerfile  Makefile  eslint.config.js  example.env  index.html  knowledge.md  package-lock.json  package.json  tsconfig.app.json
legacy/: docker-compose.yml  rebuild.sh
rust/: .dockerignore  .env  .gitignore  docker-compose.yml
server/: .editorconfig  .gitignore  Makefile  docker-compose.yaml  pom.xml
service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  main.go  sqlc.yaml
spec/: schema.sql
src/: error_handlers.rs  lib.rs  schema.rs  security.rs  templates.rs
webapp/: .gitignore  Dockerfile  Makefile  package-lock.json  package.json
(+709 files in other folders)
