[package]
name = "simple_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"] }
actix-web = "4.4.0"
actix-files = "0.6.2"
tera = { version = "1.19.1", features = ["builtins"] }
uuid = { version = "1.5.0", features = ["v4"] }
serde = { version = "1.0.193", features = ["derive"] }
markdown = "1.0.0-alpha.15"
rss = "2.0.6"