[package]
name = "simple_blog"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
actix-web = "4.4.0"
actix-files = "0.6.2"
tera = { version = "1.19.1", features = ["builtins"] }
uuid = { version = "1.5.0", features = ["v4"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
markdown = "1.0.0-alpha.15"
rss = "2.0.6"
argon2 = "0.5.2"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
anyhow = "1.0.75"
chrono = "0.4.31"